Sorting a list of media items

Hello,

Firstly, VLC is AWESOME, love it. What I don't like is the sorting algorithm. For example, I had a number of anime in a folder and wanted to sort them in my media library. I tried sorting with title descending. I had files with names from "1.mp4" to "354.mp4", the sorting came out in the fashion that I had all the files with names "1*.mp4" followed by "2*.mp4". This was not at all in numerical order, which is what I wanted. I'll be glad if this is changed in the next version, I'll still be fine if its not but...

Once again, great work Team VLC, you're well loved, popular and supported.👍