playlist: sort title and album by filename order

When sorting a playlist by title or album, use the filename sort order
(i.e. 2-title should come before 10-title). strcasecmp would previously
sort 10-title to come before 2-title. strverscmp would also solve the issue
but we use vlc_filenamecmp for the increased accuracy as
vlc_filenamecmp takes user locale into consideration.

We use strverscmp for the sort order of URLs, as URLs are generally
in ASCII and not locale-dependent.

Fixes #14548 #23200 #23611